# xgns

./: .gitignore  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: lint.yaml
docs/: _config.yml
template/test/: test_repo.py
xgns/: __init__.py
xgns/util/: latw.py  temp_mean.py
xgns/util/file/: gfdl_cons.py  gfdl_gets.py  gfdl_path.py  xr_read.py  zr_save.py
